<resources>
    <string name="app_name">托拉姆助手</string>
    <string name="app_title">托拉姆助手</string>
    <string name="app_version">ver.0.1 by 石凪萌太</string>


    <!--侧边栏按键 start-->
    <string name="nav_skill_menu">技能</string>
    <string name="nav_skill_menu_1">技能详情</string>
    <string name="nav_skill_menu_2">加点助手</string>
    <string name="nav_skill_menu_3">连击模拟</string>
    <string name="nav_enchantment_menu">附魔</string>
    <string name="nav_enchantment_menu_1">附魔简介</string>
    <string name="nav_enchantment_menu_2">附魔计算</string>
    <string name="nav_enchantment_menu_3">附魔公式</string>
    <string name="nav_refine_menu">精炼</string>
    <string name="nav_strategy_menu">攻略</string>
    <!--侧边栏按键 end-->

    <!--通用部分 start-->
    <string name="_0">0</string>
    <string name="_15">15</string>
    <string name="_165">165</string>
    <string name="_175">175</string>
    <string name="_155">155</string>
    <string name="_255">255</string>

    <string name="_defalut">defalut</string>
    <string name="mika_hint">提示</string>
    <string name="mika_warn">警告</string>
    <string name="mika_close">关闭</string>
    <string name="mika_ok">确认</string>
    <string name="mika_cancel">取消</string>
    <string name="mika_connectionless">暂时无网络连接，请稍后重新加载</string>
    <!--通用部分 end-->

    <string name="action_gratitude">鸣谢</string>

    <!--附魔计算 start-->
    <string name="eoption_item_sub">-</string>
    <string name="eoption_item_min">MIN</string>
    <string name="eoption_item_add">+</string>
    <string name="eoption_item_max">MAX</string>
    <string name="eoption_item_null_hint">请选择能力</string>

    <string name="e_assistant_lv">角色等级</string>
    <string name="e_assistant_point">技巧点数</string>
    <string name="e_assistant_potential">潜力值</string>
    <string name="e_assistant_defalut_potential">装备基础潜力值</string>
    <string name="e_assistant_equip_select">武器|防具</string>
    <string name="e_assistant_start">开始强化</string>
    <string name="e_assistant_clear">清空数据</string>
    <string name="e_assistant_success_rate">本次操作成功率:</string>
    <string name="e_assistant_residue">操作后潜/操作前潜:</string>
    <string name="e_assistant_steps">详细步骤</string>
    <string name="e_assistant_consume">消耗素材</string>

    <string name="e_assistant_no_fill_potential_hint">请先填写潜力值后再尝试选择能力</string>
    <string name="e_assistant_not_allowOperation_hint">潜力值为0或者六项属性附满后不可以再次附魔</string>
    <string name="e_assistant_change_potential_hint">解锁需要清空计算结果，是否确定?</string>
    <string name="e_assistant_default_potential_hint">装备基础潜力值在计算成功率时需要用到。\n成功率 = 附魔完剩馀潜力 / MAX(当前潜力,装备基础潜力) * 230 + 130</string>
    <string name="e_assistant_repetition_hint">该属性已存在,请选择不同属性附魔</string>
    <string name="e_assistant_no_choose_hint">防具不可选择属性觉醒,请重新选择</string>
    <string name="mika_reload">重新加载</string>
    <string name="mika_load_faild">加载失败</string>
    <!--附魔计算 end-->
</resources>
