<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/default_option_item_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/eoption_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_defalut"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/eoption_item_sub"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selector_option_btn_bg"
            android:gravity="center"
            android:text="@string/eoption_item_sub"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/eoption_item_value"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/eoption_item_add"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selector_option_btn_bg"
            android:gravity="center"
            android:text="@string/eoption_item_add"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>